--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Forecast App</string>
+    <string name="get_temperature_here">Get temperature here</string>
 </resources>
